--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
+title: Hezb blog
+subtitle: android程序猿
+description: ~~~
+author: Hezb
 language:
 timezone:
 
